omnifood/resources/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    background-color: #fff;
    color: #555;
    font-family: 'Lato', 'Arial', sans-serif;
    font-weight: 300;
    font-size: 20px;
    text-rendering: optimizeLegibility;
}

.row {
    max-width: 1140px;
    margin: 0 auto;
}

header {
    background-image: url(img/hero.jpg);
}

